# geez-calendar

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
core/: __init__.py  calendar.py  ethiopian_calendar.py  ethiopian_date.py
tests/: test_dates.py
