
### 6. `pyproject.toml`
# ```toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethio-calendar"
version = "0.1.0"
description = "Ethiopian Calendar with conversions to/from Gregorian"
authors = [
  { name="Mengistu Getie", email="mengist.dev@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

[tool.setuptools.packages.find]
where = ["ethiopian_date"]
