[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geez-calendar"
version = "0.1.0"
description = "Ethiopian ↔ Gregorian date conversion utilities."
authors = [{ name = "Mengistu Getie", email = "mengist.dev@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mgemoraw/geez-calendar"
